
    - is_hex_digit/2
    - int_to_hex_char/2
    - digit_to_int/2
    - int_to_digit/2
    - det_int_to_digit/1, det_int_to_digit/2

  NOTE: existing code that calls char.digit_to_int/2 assuming that it will
  only succeed for decimal digits (0-9) may be broken.

* Float special values, NaNs and Infinities, are now converted to strings in
  a way that is backend and grade-independent.  (Bug #348)

* string.base_digit_to_int/3 and string.det_base_digit_to_int/2 now check
  for overflow and underflow in all bases, not only base 10.

* We have reduced the memory allocated by string.to_lower and string.to_upper.

* The following classification predicates have been added to the float module:

   - is_finite/1
   - is_zero/1
   - is_infinite/1        (synonym for the existing is_inf/1 predicate)
   - is_nan_or_infinite/1 (synonym for the existing is_nan_or_inf/1 predicate)

  The following function has been added to the float module:

   - infinity/0

* The following predicates and functions have been added to the integer module:

   - from_string/2
   - from_base_string/3
   - to_int/2
   - det_to_int/1
   - to_base_string/2
   - negative_one/0, two/0, ten/0
   - is_zero/1

  The following functions in the integer module have been deprecated:

   - from_string/1
   - from_base_string/2
   - int/1

* The following predicates and functions have been added to the require module:

   - error/2
   - func_error/2

* The following predicates have been added to the string module:

   - is_all_alnum/1
   - is_empty/1
   - to_utf8_code_unit_list/2
   - to_utf16_code_unit_list/2
   - from_utf8_code_unit_list/2
   - from_utf16_code_unit_list/2
   - det_remove_prefix/3
   - compare_ignore_case_ascii/3

* The following predicates have been added to the map module:

   - foldl5/12
   - foldr5/12

* The following predicate has been added to the set modules:

   - intersection_and_differences

* We have a added a new type, maybe_errors, to the maybe module.
